# PieTracer

./: .gitignore  CMakeLists.txt  PieTracer.sln  PieTracer.vcxproj  PieTracer.vcxproj.filters  README.md  Tuple.h
Tests/: CanvasTests.cpp  ColorTests.cpp  IntersectionTests.cpp  MatrixTests.cpp  ShadingTests.cpp  SphereTests.cpp  Tests.cpp  TransformationTests.cpp  TupleTests.cpp
src/: Canvas.cpp  Canvas.h  Color.h  Main.cpp  Matrix.h  PieTracer.cpp  Tuple.h
src/Core/: Camera.h  Canvas.cpp  Canvas.h  HitRecord.h  Light.h  Material.h  Matrix.h  Raytracer.cpp  Raytracer.h  Traceable.cpp  Traceable.h  Tuple.h  World.h
src/Core/Shapes/: Sphere.cpp  Sphere.h
src/Core/Utilities/: Constants.h  Utilities.h
src/Shared/: Canvas.h  Color.h  Intersection.cpp  Intersection.h  Light.h  Material.cpp  Material.h  Matrix.h  Point.h  Ray.h  Traceable.cpp  Traceable.h  Tuple.h  Vector.h
src/Shared/Shapes/: Sphere.cpp  Sphere.h
src/Shared/Utilities/: Constants.h
src/Utilities/: Utilities.h
